examples/errors/bad_tokens.xpln
This is definitely not a valid XPLN program;

But at least you can see error recovery in action;

!;@;#;$;%;^;&;*;(;);-;+;_;
